2025-12-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/pdf-device-smoke-test.sh: New file.
	* src/roff/groff/groff.am (groff_TESTS): Run test.

2025-12-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/lj4-device-smoke-test.sh: New file.
	* src/roff/groff/groff.am (groff_TESTS): Run test.

2025-12-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/lbp-device-smoke-test.sh: New file.
	* src/roff/groff/groff.am (groff_TESTS): Run test.

2025-12-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/safer-mode-works.sh: Fix newly added test
	to actually test what it means to test.  Continues commit
	49cbc926cf, 15 December.

2025-12-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/check-delimiter-validity.sh: Check
	unparameterized and invalid escape sequences for usability as
	escape sequence delimiters.  See Savannah #67375.

2025-12-19  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (read_title_parts): Throw deprecation
	warning in category "delim" if the delimiter is invalid and
	we're not in compatibility mode.  This is a training wheel to
	get people off of ambiguous delimiters.  See Savannah #66009.

2025-12-19  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/check-delimiter-validity.sh: Improve
	tests.  Clarify progress messages to distinguish escape
	sequence, title request, and output comparison contexts.  Test
	two characters ('@', '_') that weren't tested before because I
	ran out of steam.  Test delimiters used with title requests and
	output comparisons even when not in compatibility mode.  Also
	cosmetically sort big lists to vertically align punctuation
	characters that aren't significant in numeric expressions,
	pairing them up by low-order bits of their ISO 646 code points.

2025-12-07  Alejandro Colomar <alx@kernel.org>
